[tool.poetry]
name = "the-broker"
version = "0.0.1"
description = ""
authors = ["Vealor <jakob.m.roberts@gmail.com>"]

[tool.poetry.scripts]
version = "the_broker:version"
prod = "the_broker:run_broker"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
tomlkit = "^0.7.0"
watchdog = "^1.0.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
pytest-flake8 = "^1.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

